# cp3de

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CPM.cmake  tools.cmake
test/source/: CMakeLists.txt  ex.cpp  main.cpp
